--- a/quizapp/quizapp.csproj
+++ b/quizapp/quizapp.csproj
@@ -99,6 +99,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DB.cs" />
+    <Compile Include="Model\Question.cs" />
     <Compile Include="Model\Quiz.cs" />
     <Compile Include="Utils\Dialog.cs" />
     <Compile Include="View\CreateQuestionForm.cs">
