--- a/quizapp/quizapp.csproj
+++ b/quizapp/quizapp.csproj
@@ -117,6 +117,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\User.cs" />
+    <Compile Include="View\QuizListForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\QuizListForm.Designer.cs">
+      <DependentUpon>QuizListForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="View\CreateQuestionForm.resx">
       <DependentUpon>CreateQuestionForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -132,6 +138,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="View\QuizListForm.resx">
+      <DependentUpon>QuizListForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
