--- a/quizapp/quizapp.csproj
+++ b/quizapp/quizapp.csproj
@@ -102,6 +102,12 @@
     <Compile Include="Model\Question.cs" />
     <Compile Include="Model\Quiz.cs" />
     <Compile Include="Utils\Dialog.cs" />
+    <Compile Include="View\ManageUserForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\ManageUserForm.Designer.cs">
+      <DependentUpon>ManageUserForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\CreateQuestionForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -117,12 +123,21 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\User.cs" />
+    <Compile Include="View\PlayQuizForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\PlayQuizForm.Designer.cs">
+      <DependentUpon>PlayQuizForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\QuizListForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="View\QuizListForm.Designer.cs">
       <DependentUpon>QuizListForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="View\ManageUserForm.resx">
+      <DependentUpon>ManageUserForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\CreateQuestionForm.resx">
       <DependentUpon>CreateQuestionForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -138,6 +153,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="View\PlayQuizForm.resx">
+      <DependentUpon>PlayQuizForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\QuizListForm.resx">
       <DependentUpon>QuizListForm.cs</DependentUpon>
     </EmbeddedResource>
